tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-array-close.ari
fn broken() -> i64 {
  let values = [1,
fn after() -> i64 {
  return 2;
}
